# dir-bench

./: Cargo.toml  README.md
bench-test/: Cargo.toml
bench-test/src/: lib.rs
dir-bench/: Cargo.toml  README.md
dir-bench/src/: lib.rs
fixtures/: lorem_ipsum.txt
macros/: Cargo.toml
macros/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
