[package]
name = "dir-bench-macros"
description = "proc macros for dir-bench"
authors = ["Lucas Costa <francisco.lucas0507@gmail.com>"]
repository = "https://github.com/lzldev/dir-bench"
license = "MIT"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.91", features = ["full"] }
glob = "0.3.1"
proc-macro2 = "1.0.92"
quote = "1.0.37"
